package project;

public interface StatusEntrances {
    boolean isLocked();
    boolean isOpen();
    void Lock();
    void Open();
}
