package project;

public class Ticket {
    private String message;
    private int id;

    public Ticket() {
    }

    public void setMessage(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }
}
